Import Upstream version 1.10